--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,11 +40,7 @@
 <!-- Fixed navbar -->
 <nav-bar></nav-bar>
 
-<div class="well" ng-controller="testCtrl as vm">
-	awufvbscikdevb {{vm.users}}
-</div>
-
-	<div class="container" id="body"></div>
+	<div class="container" id="body" ng-view></div>
 
 <!-- Footer -->
 <footer-directive></footer-directive>
