Now the images are mapped into a table in the database. Is working fine both front-end and back.end

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,20 +24,26 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 
 <!-- Angular JS code -->
+<!-- Main app -->
 <script src="./app/app.js"></script>
+<!-- Controllers -->
 <script src="./app/controller.js"></script>
-<script src="./app/usersService.js"></script>
-<script src="./app/routeConfig.js"></script>
-<script src="./app/appDirectives.js"></script>
 <script src="./app/CarouselCtrl.js"></script>
 <script src="./app/audioCtrl.js"></script>
 <script src="./app/dropdownCtrl.js"></script>
 <script src="./app/routeCtrl.js"></script>
-<script src="./app/testService.js"></script>
 <script src="./app/testCtrl.js"></script>
-<script src="./app/userSharedDataService.js"></script>
 <script src="./app/timerCtrl.js"></script>
 <script src="./app/navBarCtrl.js"></script>
+<!-- Services -->
+<script src="./app/usersService.js"></script>
+<script src="./app/testService.js"></script>
+<script src="./app/userSharedDataService.js"></script>
+<script src="./app/imagesService.js"></script>
+<!-- Configuration -->
+<script src="./app/routeConfig.js"></script>
+<!-- Directives -->
+<script src="./app/appDirectives.js"></script>
 
 </head>
 <body ng-app="app">
