The audio pushing and pulling to the db is now working. We push the songs as an example, an read them from the AudioCtrl in the front-end

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,6 +40,7 @@
 <script src="./app/testService.js"></script>
 <script src="./app/userSharedDataService.js"></script>
 <script src="./app/imagesService.js"></script>
+<script src="./app/audiosService.js"></script>
 <!-- Configuration -->
 <script src="./app/routeConfig.js"></script>
 <!-- Directives -->
