Item class added to the REST system and navBar updated in angular to show icons.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,6 +41,7 @@
 <script src="./app/userSharedDataService.js"></script>
 <script src="./app/imagesService.js"></script>
 <script src="./app/audiosService.js"></script>
+<script src="./app/itemsService.js"></script>
 <!-- Configuration -->
 <script src="./app/routeConfig.js"></script>
 <!-- Directives -->
