Login system is working perfectly, no errors. Also, the modal has been implemented and the navbar is updating correctly when logged in.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,6 +35,8 @@
 <script src="./app/testCtrl.js"></script>
 <script src="./app/timerCtrl.js"></script>
 <script src="./app/navBarCtrl.js"></script>
+<script src="./app/ModalCtrl.js"></script>
+<script src="./app/ModalInstanceCtrl.js"></script>
 <!-- Services -->
 <script src="./app/usersService.js"></script>
 <script src="./app/testService.js"></script>
