Final version to defend!!

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -44,10 +44,13 @@
 <script src="./app/imagesService.js"></script>
 <script src="./app/audiosService.js"></script>
 <script src="./app/itemsService.js"></script>
+<script src="./app/eventsService.js"></script>
 <!-- Configuration -->
 <script src="./app/routeConfig.js"></script>
 <!-- Directives -->
 <script src="./app/appDirectives.js"></script>
+<!-- Filters -->
+<script src="./app/appFilters.js"></script>
 
 </head>
 <body ng-app="app">
